--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,10 @@
 /******************** Reset.css ***********************/
-html, body {line-height: 1;}
+html,
+body {
+  line-height: 1;
+}
 
+// prettier-ignore
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,39 +28,83 @@ time, mark, audio, video, input, button, select {
 	box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
-a, label {display: inline-block;}
-/* a:link, a:visited, a:hover, a:active {color: inherit; text-decoration: none;} */
-img {vertical-align: bottom;}
-input, button {border-radius: 0; outline: none; border: none; background-color: transparent; cursor: pointer;}
+a,
+label {
+  display: inline-block;
+}
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: inherit;
+  text-decoration: none;
+}
+img {
+  vertical-align: bottom;
+}
+input,
+button {
+  border-radius: 0;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
 
 /******************** Base ***********************/
-.clearfix::after {display: block; content: ""; clear: both;}
-.img {width: 100%;}
-.imgx {max-width: 100%;}
-.fa {line-height: 1;}
+.clearfix::after {
+  display: block;
+  content: '';
+  clear: both;
+}
+.img {
+  width: 100%;
+}
+.imgx {
+  max-width: 100%;
+}
+.fa {
+  line-height: 1;
+}
 
-.swiper-button-prev, 
-.swiper-button-next, 
-.swiper-pagination * {outline: none; cursor: pointer;}
+.swiper-button-prev,
+.swiper-button-next,
+.swiper-pagination * {
+  outline: none;
+  cursor: pointer;
+}
