--- a/css/base.css
+++ b/css/base.css
@@ -1,10 +1,9 @@
 /******************** Reset.css ***********************/
-html,
-body {
-  line-height: 1;
-}
 
-// prettier-ignore
+/* prettier-ignore */
+html, body {line-height: 1;}
+
+/* prettier-ignore */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -18,7 +17,7 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video, input, button, select {
-	margin: 0;
+  margin: 0;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
@@ -28,63 +27,41 @@ time, mark, audio, video, input, button, select {
 	box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
+/* prettier-ignore */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
   display: block;
 }
 body {
   line-height: 1;
 }
-ol,
-ul {
+/* prettier-ignore */
+ol, ul {
   list-style: none;
 }
-blockquote,
-q {
+/* prettier-ignore */
+blockquote, q {
   quotes: none;
 }
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
+/* prettier-ignore */
+blockquote:before, blockquote:after,
+q:before, q:after {
   content: '';
-  content: none;
+	content: none;
 }
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-a,
-label {
-  display: inline-block;
-}
-a:link,
-a:visited,
-a:hover,
-a:active {
-  color: inherit;
-  text-decoration: none;
-}
+/* prettier-ignore */
+a, label {display: inline-block;}
+/* prettier-ignore */
+/* a:link, a:visited, a:hover, a:active {color: inherit; text-decoration: none;} */
 img {
   vertical-align: bottom;
 }
-input,
-button {
-  border-radius: 0;
-  outline: none;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-}
+/* prettier-ignore */
+input, button {border-radius: 0; outline: none; border: none; background-color: transparent; cursor: pointer;}
 
 /******************** Base ***********************/
 .clearfix::after {
@@ -102,9 +79,7 @@ button {
   line-height: 1;
 }
 
-.swiper-button-prev,
-.swiper-button-next,
-.swiper-pagination * {
-  outline: none;
-  cursor: pointer;
-}
+/* prettier-ignore */
+.swiper-button-prev, 
+.swiper-button-next, 
+.swiper-pagination * {outline: none; cursor: pointer;}
